# GstreamerDev

./: .gitignore  README.md  run.sh
.devcontainer/: Dockerfile  devcontainer.json
gst-template/: meson.build
gst-template/gst-app/: demo.c  meson.build
gst-template/gst-plugin/: meson.build
gst-template/gst-plugin/src/: gstmyfilter.c  gstmyfilter.h
gst-template/tests/: meson.build  test_demo.cpp
